tests/toylang/neg/001166_mutation.toylang
program a = { int while a do sleep; } .
